crates/aion-awl/tests/fixtures/rev2/declarations/invalid/worker_without_actions.awl
//! The notifier worker block declares no actions; at least one is required.
workflow notify_once
  input message: String
  outcome sent: type Receipt, route success

type Receipt { id: String, accepted: Bool }

worker notifier

worker sender
  action send_message(message: String) -> Receipt

step send
  message |> send_message |> route sent
